deployments/kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: http-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - http-server.cathy.learning
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: http-server-credential
